fix z-index for froala popups

--- a/src/components/rich-text-edit/adapter/vue-froala.scss
+++ b/src/components/rich-text-edit/adapter/vue-froala.scss
@@ -13,5 +13,8 @@
         }
 
         /deep/ .fr-wrapper.show-placeholder .fr-placeholder { display: none; }
+
+        // Allow popups to appear over modals.
+        /deep/ .fr-popup .fr-desktop .fr-active { z-index: 103; }
     }
 }
